<resources>
    <string name="app_name">VK</string>
    <string name="username">Pavel Klimovich</string>
    <string name="online">offline</string>
    <string name="edit">Edit</string>
    <string name="status">Switch to telegram dude</string>
    <string name="friends_count">3 friends</string>
    <string name="location">Lives in Grodno</string>
    <string name="additional_info">Show info</string>
    <string name="whats_new">What\'s new?</string>
    <string name="feed">feed</string>
    <string name="search">search</string>
    <string name="messages">messages</string>
    <string name="notification">notification</string>
    <string name="home">home</string>
</resources>
